# FinSight

./: .description  .gitignore  README.md  agent.py  app.py  config.py  data_loader.py  main.py  pdf_extractor.py  pyproject.toml  requirements.txt  tasks.py
